--- a/heartbeat-jaxb2-api/pom.xml
+++ b/heartbeat-jaxb2-api/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.mdubois.heartbeat</groupId>
+        <groupId>io.sovaj.heartbeat</groupId>
         <artifactId>heartbeat-parent</artifactId>
         <version>1.0.0.0-SNAPSHOT</version>
     </parent>
