--- a/heartbeat-servlet/pom.xml
+++ b/heartbeat-servlet/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.mdubois.heartbeat</groupId>
+        <groupId>io.sovaj.heartbeat</groupId>
         <artifactId>heartbeat-parent</artifactId>
         <version>1.0.0.0-SNAPSHOT</version>
     </parent>
@@ -16,7 +16,7 @@
       
         <!-- Internal -->
         <dependency>
-            <groupId>org.mdubois.heartbeat</groupId>
+            <groupId>io.sovaj.heartbeat</groupId>
             <artifactId>heartbeat-api</artifactId>
             <version>${project.version}</version>
         </dependency>
