--- a/heartbeat-jaxb2-api/pom.xml
+++ b/heartbeat-jaxb2-api/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>io.sovaj.heartbeat</groupId>
         <artifactId>heartbeat-parent</artifactId>
-        <version>1.0.0.0-SNAPSHOT</version>
+        <version>1.0.0.0.RELEASE</version>
     </parent>
 
     <artifactId>heartbeat-jaxb2-api</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.0.0-SNAPSHOT</version>
+    <version>1.0.0.0.RELEASE</version>
 
     <dependencies>
         <dependency>
