--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.sovaj.heartbeat</groupId>
     <artifactId>heartbeat-parent</artifactId>
-    <version>1.0.0.0-SNAPSHOT</version>
+    <version>1.0.0.0.RELEASE</version>
 
     <packaging>pom</packaging>
 
@@ -29,7 +29,8 @@
         <url>https://github.com/sovaj/sovaj.heartbeat</url>
         <connection>scm:git:git://github.com/sovaj/sovaj.heartbeat.git</connection>
         <developerConnection>scm:git:git@github.com:sovaj/sovaj.heartbeat.git</developerConnection>
-    </scm>
+      <tag>heartbeat-parent-1.0.0.0.RELEASE</tag>
+  </scm>
 
     <developers>
         <developer>
