--- a/heartbeat-api/pom.xml
+++ b/heartbeat-api/pom.xml
@@ -3,12 +3,12 @@
     <parent>
         <groupId>io.sovaj.heartbeat</groupId>
         <artifactId>heartbeat-parent</artifactId>
-        <version>1.0.0.0.RELEASE</version>
+        <version>1.0.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>heartbeat-api</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.0.0.RELEASE</version>
+    <version>1.0.0.1-SNAPSHOT</version>
 
 
     <!-- Dependances -->
