--- a/heartbeat-samples/pom.xml
+++ b/heartbeat-samples/pom.xml
@@ -4,12 +4,12 @@
     <parent>
         <groupId>io.sovaj.heartbeat</groupId>
         <artifactId>heartbeat-parent</artifactId>
-        <version>1.0.0.0.RELEASE</version>
+        <version>1.0.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>heartbeat-samples</artifactId>
     <packaging>war</packaging>
-    <version>1.0.0.0.RELEASE</version>
+    <version>1.0.0.1-SNAPSHOT</version>
     
    
     <properties> 
