--- a/heartbeat-api/pom.xml
+++ b/heartbeat-api/pom.xml
@@ -10,6 +10,7 @@
     <packaging>jar</packaging>
     <version>1.0.0.1-SNAPSHOT</version>
 
+    <name>SOVAJ :: ${project.artifactId}</name>
 
     <!-- Dependances -->
     <dependencies>
