--- a/heartbeat-jaxb2-api/pom.xml
+++ b/heartbeat-jaxb2-api/pom.xml
@@ -12,6 +12,8 @@
     <packaging>jar</packaging>
     <version>1.0.0.1-SNAPSHOT</version>
 
+    <name>SOVAJ :: ${project.artifactId}</name>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
