--- a/heartbeat-samples/pom.xml
+++ b/heartbeat-samples/pom.xml
@@ -10,8 +10,9 @@
     <artifactId>heartbeat-samples</artifactId>
     <packaging>war</packaging>
     <version>1.0.0.1-SNAPSHOT</version>
-    
-   
+
+    <name>SOVAJ :: ${project.artifactId}</name>
+        
     <properties> 
         <version.slf4j>1.5.11</version.slf4j>
         <version.logback>0.9.18</version.logback>
@@ -50,9 +51,6 @@
     <build>
         <plugins>
             <plugin>
-                <!-- <groupId>org.mortbay.jetty</groupId> -->
-                <!-- <artifactId>jetty-maven-plugin</artifactId> -->
-                <!-- <version>7.1.6.v20100715</version> -->
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>maven-jetty-plugin</artifactId>
                 <version>${jetty.version}</version>
