--- a/heartbeat-servlet/pom.xml
+++ b/heartbeat-servlet/pom.xml
@@ -11,6 +11,7 @@
     <packaging>jar</packaging>
     <version>1.0.0.1-SNAPSHOT</version>
     
+    <name>SOVAJ :: ${project.artifactId}</name>
 
     <dependencies>
       
